[gd_scene load_steps=4 format=3 uid="uid://pochpevx00k4"]

[ext_resource type="Script" path="res://bubble.gd" id="1_kvci8"]
[ext_resource type="SpriteFrames" uid="uid://ciaryy38y4ib0" path="res://bubble_sprite_frames.tres" id="2_r31pm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4mw8g"]
radius = 24.0

[node name="Bubble" type="Area2D"]
script = ExtResource("1_kvci8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4mw8g")

[node name="PopTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_r31pm")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="PopTimer" to="." method="_on_pop_timer_timeout"]
